--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "trackmania-api-node": "0.0.27",
-    "trackmania.io": "^3.2.0"
+    "trackmania.io": "^3.2.0",
+    "waitfor": "^0.1.3"
   }
 }
