--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 name: Update KEKL Data
 
-#on:
-#  workflow_dispatch:
-#  schedule:
-#    - cron: '0 23 * * *'
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 23 * * *'
 
 
 jobs:
