--- a/.github/workflows/kekl.yml
+++ b/.github/workflows/kekl.yml
@@ -30,7 +30,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.TM_GITHUB_TOKEN }}
-          file: target/release/kekldata
+          file: data.json
           asset_name: data.json
           tag: LATEST
           overwrite: true
