--- a/.github/workflows/kekl.yml
+++ b/.github/workflows/kekl.yml
@@ -17,15 +17,15 @@ jobs:
       - uses: actions/checkout@v2
         with:
           token: ${{ secrets.TM_GITHUB_TOKEN }}
-     # - name: Setup Node
-     #   uses: actions/setup-node@v3
-     #   with:
-     #     node-version: 16.13.x
-    #      cache: npm
-    #  - name: npm ci
-    #    run: npm ci
-    #  - name: node .
-    #    run: node .
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.13.x
+          cache: npm
+      - name: npm ci
+        run: npm ci
+      - name: node .
+        run: node .
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
         with:
@@ -45,5 +45,4 @@ jobs:
           date +%s > data-updated.txt
           git add .
           git commit -m "$(date)"
-          
-        # git push
+          git push
